[package]
name = "accessors"
version = "0.0.3"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "(WIP) Getters and setters for Rust using macros 1.1"
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/emk/accessors"
#documentation

[lib]
proc-macro = true
# Unit tests don't seem to work for proc-macro crates.
test = false

[dependencies]
log = "0.3.6"
syn = "0.9.0"
quote = "0.3.3"
